Güncel site versiyonu eklendi 13 kasım son attığım video eklendi4

--- a/index.html
+++ b/index.html
@@ -40,272 +40,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- ⚡ CRITICAL CSS - İlk ekran için inline -->
-  <style>
-    /* ========================================
-   CRITICAL CSS - İlk Ekran Yükleme
-   ======================================== */
-
-/* Reset ve Base Styles */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  font-family: 'DM Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.6;
-  color: #333;
-  background: #fff;
-  overflow-x: hidden;
-}
-
-/* Container */
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-/* Header & Navigation - Above the fold */
-.main-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  background: #fff;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  transition: all 0.3s ease;
-}
-
-.main-header__inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px 0;
-}
-
-.main-header__logo {
-  flex-shrink: 0;
-}
-
-.main-header__logo img {
-  height: 50px;
-  width: auto;
-  display: block;
-}
-
-.main-menu {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.main-menu > li {
-  margin: 0 15px;
-}
-
-.main-menu a {
-  text-decoration: none;
-  color: #333;
-  font-weight: 500;
-  transition: color 0.3s ease;
-  display: inline-block;
-  padding: 5px 0;
-}
-
-.main-menu a:hover {
-  color: #007bff;
-}
-
-/* Mobile Menu Toggle */
-.mobile-nav__toggler {
-  display: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-}
-
-.mobile-nav__toggler span {
-  display: block;
-  width: 30px;
-  height: 3px;
-  background: #333;
-  margin: 5px 0;
-  transition: all 0.3s ease;
-}
-
-/* Hero Section - Above the fold */
-.main-slider {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  min-height: 600px;
-  margin-top: 80px;
-  overflow: hidden;
-}
-
-.main-slider__bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.main-slider__bg::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.4);
-}
-
-.main-slider__content {
-  position: relative;
-  z-index: 2;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: #fff;
-}
-
-.main-slider__title {
-  font-size: 3.5rem;
-  font-weight: 700;
-  line-height: 1.2;
-  margin-bottom: 20px;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-}
-
-.main-slider__text {
-  font-size: 1.25rem;
-  margin-bottom: 30px;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* Buttons */
-.thm-btn {
-  display: inline-block;
-  padding: 15px 35px;
-  background: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: 600;
-  transition: all 0.3s ease;
-  border: 2px solid #007bff;
-}
-
-.thm-btn:hover {
-  background: transparent;
-  color: #007bff;
-  border-color: #007bff;
-}
-
-/* Loading State */
-.preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  z-index: 9999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.preloader__image {
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-/* Responsive - Mobile First */
-@media (max-width: 991px) {
-  .mobile-nav__toggler {
-    display: block;
-  }
-  
-  .main-menu {
-    display: none;
-  }
-  
-  .main-slider__title {
-    font-size: 2.5rem;
-  }
-  
-  .main-slider__text {
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 767px) {
-  .main-header__logo img {
-    height: 40px;
-  }
-  
-  .main-slider {
-    min-height: 500px;
-  }
-  
-  .main-slider__title {
-    font-size: 2rem;
-  }
-  
-  .thm-btn {
-    padding: 12px 25px;
-    font-size: 0.9rem;
-  }
-}
-
-/* Utility Classes */
-.text-center {
-  text-align: center;
-}
-
-.d-none {
-  display: none;
-}
-
-.d-block {
-  display: block;
-}
-  </style>
+    <link rel="preload" href="assets/css/kritik.css" as="style">
   <link rel="stylesheet" href="assets/css/critical.css">
 
   <!-- Preload Ana CSS - Hemen sonra yüklensin -->
   <link rel="preload" href="assets/css/bundle.all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="assets/css/bundle.all.min.css"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="assets/css/bundle.all.min.css">
+</noscript>
   
   <!-- Menu Toggler CSS -->
   <link rel="preload" href="assets/css/menu-toggler.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="assets/css/menu-toggler.css"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="assets/css/menu-toggler.css">
+</noscript>
 
   <!-- Fonts - Async yükleme -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -503,10 +251,6 @@ body {
             <div class="banner-one__pattern"
             style="background-image: url(assets/images/pattern/banner-v1-pattern.png);"></div>
             <div class="banner-one__pattern2"><img src="assets/images/pattern/banner-v1-pattern2.png" alt="#"></div>
-
-            <div class="banner-one__img5">
-            <img src="assets/images/resources/Yeni Proje (1).webp" alt="#">
-                </div>
             <!-- <div class="shape1 rotate-me"><img lazy="loading"  src="assets/images/shapes/banner-v1-shape11.png" alt="#"></div> sonradan uçak elenebilir-->
             <div class="container">
                 <div class="banner-one__location clearfix">
