Güncel site versiyonu eklendi 13 kasım son attığım video eklendi5

--- a/index.html
+++ b/index.html
@@ -250,9 +250,12 @@
         <section class="banner-one">
             <div class="banner-one__pattern"
             style="background-image: url(assets/images/pattern/banner-v1-pattern.png);"></div>
-            <div class="banner-one__pattern2"><img src="assets/images/pattern/banner-v1-pattern2.png" alt="#"></div>
-            <!-- <div class="shape1 rotate-me"><img lazy="loading"  src="assets/images/shapes/banner-v1-shape11.png" alt="#"></div> sonradan uçak elenebilir-->
-            <div class="container">
+<div class="banner-one__pattern2">
+    <img src="assets/images/pattern/banner-v1-pattern2.png" 
+         alt="Alber Turizm" 
+         fetchpriority="high"
+         >
+</div>            <div class="container">
                 <div class="banner-one__location clearfix">
 
                     <!-- Start Banner One Location single -->
