Güncel site versiyonu eklendi 13 kasım son attığım video eklendi7

--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="stylesheet" href="assets/css/menu-toggler.css">
+
+
   <!-- Preload Ana CSS - Hemen sonra yüklensin -->
   <link rel="preload" href="assets/css/bundle.all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
     <link rel="stylesheet" href="assets/css/bundle.all.min.css">
 </noscript>
-  
-  <!-- Menu Toggler CSS -->
-  <link rel="preload" href="assets/css/menu-toggler.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript>
-    <link rel="stylesheet" href="assets/css/menu-toggler.css">
-</noscript>
+
 
   <!-- Fonts - Async yükleme -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -244,8 +242,7 @@
             <div class="banner-one__pattern2">
                 <img src="assets/images/pattern/banner-v1-pattern2.png" 
                     alt="Alber Turizm" 
-                    fetchpriority="high"
-                    >
+                    fetchpriority="high">
             </div>            <div class="container">
                 <div class="banner-one__location clearfix">
 
