--- a/Kisisel-Verilerin-Korunmasi.html
+++ b/Kisisel-Verilerin-Korunmasi.html
@@ -487,9 +487,37 @@
         <!-- /.mobile-nav__content -->
     </div>
     <!-- /.mobile-nav__wrapper -->
+<!-- Temel kütüphaneler (CDN) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
 
-<script src="assets/js/vendor.min.js"defer></script>
-<script src="assets/js/theme.min.js" defer></script>
+<!-- Yerel dosyalar -->
+<script src="assets/js/jquery.ajaxchimp.min.js" defer></script>
+<script src="assets/js/jquery.validate.min.js" defer></script>
+<script src="assets/js/wNumb.min.js" defer></script>
+<script src="assets/js/curved-text/jquery.circleType.js" defer></script>
+<script src="assets/js/curved-text/jquery.fittext.js" defer></script>
+<script src="assets/js/curved-text/jquery.lettering.min.js" defer></script>
+<script src="assets/js/gsap/SplitText.js" defer></script>
+<script src="assets/js/02-countdown.min.js" defer></script>
+<script src="assets/js/03-jquery.appear.min.js" defer></script>
+<script src="assets/js/04-jquery.nice-select.min.js" defer></script>
+<script src="assets/js/05-jquery-sidebar-content.js" defer></script>
+<script src="assets/js/06-marquee.min.js" defer></script>
+<script src="assets/js/07-owl.carousel.min.js" defer></script>
+<script src="assets/js/08-jarallax.min.js" defer></script>
+<script src="assets/js/09-odometer.min.js" defer></script>
+<script src="assets/js/10-jquery-ui.js" defer></script>
+<script src="assets/js/11-jquery.magnific-popup.min.js" defer></script>
+<script src="assets/js/12-wow.js" defer></script>
+<script src="assets/js/13-isotope.js" defer></script>
+
+<!-- Senin scriptler en sonda -->
+<script src="assets/js/script.js" defer></script>
+
 </body>
 
 </html>
