--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
 
 
 
-<script defer>
+<script >
 const playBtn = document.getElementById("playBtn");
 const modal = document.getElementById("modal");
 const closeBtn = document.getElementById("closeBtn");
