Güncel site versiyonu eklendi 13 kasım son attığım video eklendi js defer eklendi 2

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
 
 
 
-<script >
+<script defer>
 const playBtn = document.getElementById("playBtn");
 const modal = document.getElementById("modal");
 const closeBtn = document.getElementById("closeBtn");
