Güncel site versiyonu eklendi 13 kasım son attığım video eklendi09

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-    <link rel="stylesheet" href="assets/css/menu-toggler.css" >
-    <link rel="stylesheet" href="assets/css/bundle.all.min.css">
+<link rel="stylesheet" href="assets/css/banner.css">
+
+<link rel="stylesheet" href="assets/css/menu-toggler.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="assets/css/bundle.all.min.css" media="print" onload="this.media='all'">
+
 
 
   <!-- Fonts - Async yükleme -->
