--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,14 @@
 
 <!-- Senin scriptler en sonda -->
 <script src="assets/js/script.js" defer></script>
-
+<script>
+    setTimeout(function() {
+        var preloader = document.querySelector('.loader-wrap');
+        if (preloader) {
+            preloader.style.display = 'none';
+        }
+    }, 1000);
+</script>
 
 
 <script defer>
