--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-<link rel="stylesheet" href="assets/css/menu-toggler.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="assets/css/bundle.all.min.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="assets/css/menu-toggler.css" >
+<link rel="stylesheet" href="assets/css/bundle.all.min.css">
 
   <!-- Fonts - Async yükleme -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
