--- a/index.html
+++ b/index.html
@@ -1124,14 +1124,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" async></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" async></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
 
 <!-- Yerel dosyalar (jQuery bağımlı) -->
 <script src="assets/js/jquery.ajaxchimp.min.js" defer></script>
 <script src="assets/js/jquery.validate.min.js" defer></script>
-<script src="assets/js/wNumb.min.js" async></script>
+<script src="assets/js/wNumb.min.js" defer></script>
 
 <script src="assets/js/curved-text/jquery.circleType.js" defer></script>
 <script src="assets/js/curved-text/jquery.fittext.js" defer></script>
