--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <link rel="stylesheet" href="assets/css/menu-toggler.css" >
-<link rel="stylesheet" href="assets/css/bundle.all.min.css">
+<link rel="stylesheet" href="assets/css/bundle.all.min.css" >
 
   <!-- Fonts - Async yükleme -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -1120,24 +1120,23 @@
     <!-- /.mobile-nav__wrapper -->
 
 
+
+
 <!-- Temel kütüphaneler (CDN) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" async></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
 
-<!-- Yerel dosyalar (jQuery bağımlı) -->
+<!-- Yerel dosyalar -->
 <script src="assets/js/jquery.ajaxchimp.min.js" defer></script>
 <script src="assets/js/jquery.validate.min.js" defer></script>
 <script src="assets/js/wNumb.min.js" defer></script>
-
 <script src="assets/js/curved-text/jquery.circleType.js" defer></script>
 <script src="assets/js/curved-text/jquery.fittext.js" defer></script>
 <script src="assets/js/curved-text/jquery.lettering.min.js" defer></script>
 <script src="assets/js/gsap/SplitText.js" defer></script>
-
 <script src="assets/js/02-countdown.min.js" defer></script>
 <script src="assets/js/03-jquery.appear.min.js" defer></script>
 <script src="assets/js/04-jquery.nice-select.min.js" defer></script>
@@ -1153,14 +1152,7 @@
 
 <!-- Senin scriptler en sonda -->
 <script src="assets/js/script.js" defer></script>
-<script>
-    setTimeout(function() {
-        var preloader = document.querySelector('.loader-wrap');
-        if (preloader) {
-            preloader.style.display = 'none';
-        }
-    }, 1000);
-</script>
+
 
 
 <script defer>
